Resolves: tdf#84121 wrong password passed to xpdfimport

regression from...

commit eb276d11a652601f743d69ada7a38016bd97d73e
Author: Fridrich Štrba <fridrich.strba@bluewin.ch>
Date:   Mon Jul 8 14:01:17 2013 +0200

    fdo#38878: Upgrading internal xpdf -> poppler

before this the hashed _OOO_pdfi_Credentials_ was used
in the removed OOoImportSecurityhandler::authorize

but after this the hashed password continued to be
passed through stdin, while the unhashed password
was the required data.

Change-Id: Iadc8a372abcfab514f724dd95f05776e5153d007